<resources>
    <string name="app_name">News App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="breaking_news">Breaking News</string>
    <string name="top_news">Top News</string>
    <string name="search_news">Search News</string>
    <string name="article_image">Article Image</string>
    <string name="view_all">View All</string>
    <string name="filter">Filter</string>
    <string name="language">Language</string>
    <string name="country">Country</string>
    <string name="user_name">User Name</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
</resources>